# lispy

./: .flake8  .isort.cfg  README.md  lispy.py  pyproject.toml  tests.py
.github/workflows/: ci.yml  pipeline.yml
docs/: architecture.rst  conf.py  index.rst  modules.rst
lispy/: __init__.py  __main__.py  constants.py  env.py  errors.py  evaluator.py  macros.py  messages.py  parser.py  primitives.py  repl.py  type_checker.py  types.py
requirements/: dev.txt
tests/: test_control_flow.py  test_currying.py  test_definitions.py  test_do.py  test_dynamic_binding.py  test_env.py  test_integration.py  test_laziness.py  test_lists.py  test_math.py  test_parser.py  test_platform.py  test_syntax.py  test_try_catch.py  test_types.py  utils.py
