[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lispy"
version = "2.0.0"
description = "A simple Lisp interpreter in Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Peter Norvig", email="peter@norvig.com" },
  { name="Lispy Contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/fuodorov/lispy"
"Bug Tracker" = "https://github.com/fuodorov/lispy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lispy*"]
